--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^5.1.5",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   }
