--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
+    "twilio": "^5.7.3",
     "xlsx": "^0.18.5"
   }
 }
