feature / surveyGuru Initial setup

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "google-translate-api-x": "^10.7.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.16.1",
