--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ CLOUDINARY_FOLDER= # e.g., EventPassSuite
 # Others
 NODE_ENV=development
 PORT=4000
+
+# Frontend Configuration
+FRONTEND_BASE_URL=# e.g., http://localhost:3000
+SURVEYGURU_PUBLIC_PATH=/surveyguru
