feature / Added dashboard insights

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
+    "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "twilio": "^5.7.3",
