feature / Add example values for email configuration in .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 MONGO_URI= # e.g., mongodb://localhost:27017/EventPassSuite-db
 
 # Security Keys
+EMAIL_USER= # e.g., abc@google.com
+EMAIL_PASS= # For Gmail, use App Passwords if 2FA is enabled
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 MASTER_KEY=
