Add AWS S3 integration for file management

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_FOLDER= # e.g., EventPassSuite
 
+# S3 Configuration
+AWS_REGION= 
+AWS_ACCESS_KEY_ID= 
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET=eventpass-suite
+CLOUDFRONT_URL=
+
 # Others
 NODE_ENV=development
 PORT=4000
