--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "WhiteWall Digital Solutions",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
