Refactor email configuration in .env.example and update email service to use new structure; remove unused WhatsApp service.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 # Database Configuration
 MONGO_URI= # e.g., mongodb://localhost:27017/EventPassSuite-db
 
-# Security Keys
-EMAIL_USER= # e.g., abc@google.com
-EMAIL_PASS= # For Gmail, use App Passwords if 2FA is enabled
+# Email Configuration
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_FROM=
+
+
+# Admin Credentials
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 MASTER_KEY=
+
+# JWT Configuration
 JWT_SECRET=
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=7d
