Updated transaltion feature to add Google Translate

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,10 @@ AWS_SECRET_ACCESS_KEY=
 S3_BUCKET=eventpass-suite
 CLOUDFRONT_URL=
 
+# Google Translate
+GOOGLE_API_URL=
+GOOGLE_TRANSLATE_API_KEY=
+
 # Others
 NODE_ENV=development
 PORT=4000
