--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy EventPass Backend (EC2 Runner)
 on:
   push:
     branches:
-      - main   
+      - main
 
 jobs:
   deploy:
@@ -13,43 +13,51 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up environment file
+      - name: Prepare deployment directory
         run: |
-          cat > /var/www/eventpass-backend/.env <<EOF
-          MONGO_URI=${{ secrets.MONGO_URI }}
-          EMAIL_HOST=${{ secrets.EMAIL_HOST }}
-          EMAIL_PORT=${{ secrets.EMAIL_PORT }}
-          EMAIL_USER=${{ secrets.EMAIL_USER }}
-          EMAIL_PASS=${{ secrets.EMAIL_PASS }}
-          EMAIL_FROM=${{ secrets.EMAIL_FROM }}
-          ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
-          ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
-          MASTER_KEY=${{ secrets.MASTER_KEY }}
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
-          JWT_ACCESS_EXPIRY=${{ secrets.JWT_ACCESS_EXPIRY }}
-          JWT_REFRESH_EXPIRY=${{ secrets.JWT_REFRESH_EXPIRY }}
-          CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}
-          CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}
-          CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
-          CLOUDINARY_FOLDER=${{ secrets.CLOUDINARY_FOLDER }}
-          AWS_REGION=${{ secrets.AWS_REGION }}
-          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          S3_BUCKET=${{ secrets.S3_BUCKET }}
-          CLOUDFRONT_URL=${{ secrets.CLOUDFRONT_URL }}
-          GOOGLE_API_URL=${{ secrets.GOOGLE_API_URL }}
-          GOOGLE_TRANSLATE_API_KEY=${{ secrets.GOOGLE_TRANSLATE_API_KEY }}
-          FRONTEND_BASE_URL=${{ secrets.FRONTEND_BASE_URL }}
-          SURVEYGURU_PUBLIC_PATH=${{ secrets.SURVEYGURU_PUBLIC_PATH }}
-          NODE_ENV=${{ secrets.NODE_ENV }}
-          PORT=${{ secrets.PORT }}
-          EOF
+          sudo mkdir -p /var/www/eventpass-backend
+          sudo chown -R ubuntu:ubuntu /var/www/eventpass-backend
+          cd /var/www/eventpass-backend
+          rm -rf * .[^.]* || true
+          cp -r $GITHUB_WORKSPACE/* .
 
-      - name: Deploy application
+      - name: Create .env file
         run: |
           cd /var/www/eventpass-backend
-          rm -rf * .[^.]*
-          cp -r $GITHUB_WORKSPACE/* .
+          sudo rm -f .env
+          sudo touch .env
+          echo "MONGO_URI='${{ secrets.MONGO_URI }}'" | sudo tee -a .env
+          echo "EMAIL_HOST='${{ secrets.EMAIL_HOST }}'" | sudo tee -a .env
+          echo "EMAIL_PORT='${{ secrets.EMAIL_PORT }}'" | sudo tee -a .env
+          echo "EMAIL_USER='${{ secrets.EMAIL_USER }}'" | sudo tee -a .env
+          echo "EMAIL_PASS='${{ secrets.EMAIL_PASS }}'" | sudo tee -a .env
+          echo "EMAIL_FROM='${{ secrets.EMAIL_FROM }}'" | sudo tee -a .env
+          echo "ADMIN_EMAIL='${{ secrets.ADMIN_EMAIL }}'" | sudo tee -a .env
+          echo "ADMIN_PASSWORD='${{ secrets.ADMIN_PASSWORD }}'" | sudo tee -a .env
+          echo "MASTER_KEY='${{ secrets.MASTER_KEY }}'" | sudo tee -a .env
+          echo "JWT_SECRET='${{ secrets.JWT_SECRET }}'" | sudo tee -a .env
+          echo "JWT_ACCESS_EXPIRY='${{ secrets.JWT_ACCESS_EXPIRY }}'" | sudo tee -a .env
+          echo "JWT_REFRESH_EXPIRY='${{ secrets.JWT_REFRESH_EXPIRY }}'" | sudo tee -a .env
+          echo "CLOUDINARY_CLOUD_NAME='${{ secrets.CLOUDINARY_CLOUD_NAME }}'" | sudo tee -a .env
+          echo "CLOUDINARY_API_KEY='${{ secrets.CLOUDINARY_API_KEY }}'" | sudo tee -a .env
+          echo "CLOUDINARY_API_SECRET='${{ secrets.CLOUDINARY_API_SECRET }}'" | sudo tee -a .env
+          echo "CLOUDINARY_FOLDER='${{ secrets.CLOUDINARY_FOLDER }}'" | sudo tee -a .env
+          echo "AWS_REGION='${{ secrets.AWS_REGION }}'" | sudo tee -a .env
+          echo "AWS_ACCESS_KEY_ID='${{ secrets.AWS_ACCESS_KEY_ID }}'" | sudo tee -a .env
+          echo "AWS_SECRET_ACCESS_KEY='${{ secrets.AWS_SECRET_ACCESS_KEY }}'" | sudo tee -a .env
+          echo "S3_BUCKET='${{ secrets.S3_BUCKET }}'" | sudo tee -a .env
+          echo "CLOUDFRONT_URL='${{ secrets.CLOUDFRONT_URL }}'" | sudo tee -a .env
+          echo "GOOGLE_API_URL='${{ secrets.GOOGLE_API_URL }}'" | sudo tee -a .env
+          echo "GOOGLE_TRANSLATE_API_KEY='${{ secrets.GOOGLE_TRANSLATE_API_KEY }}'" | sudo tee -a .env
+          echo "FRONTEND_BASE_URL='${{ secrets.FRONTEND_BASE_URL }}'" | sudo tee -a .env
+          echo "SURVEYGURU_PUBLIC_PATH='${{ secrets.SURVEYGURU_PUBLIC_PATH }}'" | sudo tee -a .env
+          echo "NODE_ENV='production'" | sudo tee -a .env
+          echo "PORT='8080'" | sudo tee -a .env
+          echo ".env file created successfully"
+
+      - name: Install and restart PM2 app
+        run: |
+          cd /var/www/eventpass-backend
           npm install --omit=dev
           pm2 restart eventpass-backend || pm2 start npm --name "eventpass-backend" -- run start
           pm2 save
