Added / variables for whatsapp

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ EMAIL_USER=
 EMAIL_PASS=
 EMAIL_FROM=
 
+#whatsapp Configuration
+WHATSAPP_BASE_URL=
+WHATSAPP_ACCOUNT_SSID=
+WHATSAPP_USERNAME=
+WHATSAPP_PASSWORD=
+WHATSAPP_FROM=
+WHATSAPP_CONTENT_SSID=
 
 # Admin Credentials
 ADMIN_EMAIL=
