Update / added country code in env

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ WHATSAPP_USERNAME=
 WHATSAPP_PASSWORD=
 WHATSAPP_FROM=
 WHATSAPP_CONTENT_SSID=
+WHATSAPP_COUNTRY_CODE=
 
 # Admin Credentials
 ADMIN_EMAIL=
