--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
           echo "WHATSAPP_PASSWORD='${{ secrets.WHATSAPP_PASSWORD }}'" | sudo tee -a .env
           echo "WHATSAPP_FROM='${{ secrets.WHATSAPP_FROM }}'" | sudo tee -a .env
           echo "WHATSAPP_CONTENT_SSID='${{ secrets.WHATSAPP_CONTENT_SSID }}'" | sudo tee -a .env
+          echo "WHATSAPP_COUNTRY_CODE='${{ secrets.WHATSAPP_COUNTRY_CODE }}'" | sudo tee -a .env
           echo "NODE_ENV='production'" | sudo tee -a .env
           echo "PORT='8080'" | sudo tee -a .env
           echo ".env file created successfully"
