Update WhatsApp configuration in .env.example for check-in and event registration

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ WHATSAPP_ACCOUNT_SSID=
 WHATSAPP_USERNAME=
 WHATSAPP_PASSWORD=
 WHATSAPP_FROM=
-WHATSAPP_CONTENT_SSID=
-WHATSAPP_COUNTRY_CODE=
+CHECKIN_WHATSAPP_SSID=
+EVENTREG_WHATSAPP_SSID=
 
 # Admin Credentials
 ADMIN_EMAIL=
