Add WhatsApp message logging and webhook handling
- Implement WhatsAppMessageLog model for storing message logs.
- Create controllers for fetching WhatsApp logs and handling Twilio webhooks.
- Update routes to include new WhatsApp log and webhook endpoints.
- Enhance WhatsApp service to log message details on sending.
- Emit socket events for WhatsApp status updates and inbound messages.
- Update environment configuration for backend base URL.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
           echo "WHATSAPP_FROM='${{ secrets.WHATSAPP_FROM }}'" | sudo tee -a .env
           echo "CHECKIN_WHATSAPP_SSID='${{ secrets.CHECKIN_WHATSAPP_SSID }}'" | sudo tee -a .env
           echo "EVENTREG_WHATSAPP_SSID='${{ secrets.EVENTREG_WHATSAPP_SSID }}'" | sudo tee -a .env
+          echo "BACKEND_BASE_URL='${{ secrets.BACKEND_BASE_URL }}'" | sudo tee -a .env
           echo "NODE_ENV='production'" | sudo tee -a .env
           echo "PORT='8080'" | sudo tee -a .env
           echo ".env file created successfully"
