--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,4 @@ PORT=4000
 # Frontend Configuration
 FRONTEND_BASE_URL=# e.g., http://localhost:3000
 SURVEYGURU_PUBLIC_PATH=/surveyguru
+BACKEND_BASE_URL=# e.g., http://localhost:4000
